--- a/overrides/config/crossroads.cfg
+++ b/overrides/config/crossroads.cfg
@@ -29,7 +29,7 @@ internal {
     B:"If you are crashing from StackOverflow errors and you either have a tiny amount of RAM or built an insanely large & complicated rotary setup, then set this to true, destroy the setup, and set this to false. Also maybe send me a picture of the setup."=false
 
     # The documentation will appear in the misc section of Technician's Manual, NOT the Mysterious Journal. Pack makers: Turn this off before releasing the pack!
-    B:"Show CraftTweaker integration documentation in the guide book? (Default false)"=false
+    B:"Show CraftTweaker integration documentation in the guide book? (Default false)"=true
 
     # Lower value means smoother gear rotation and less clipping, but more packets sent AKA lag. (Range 0.0-1.0, Default .02)
     D:"Speed Precision"=0.019999999552965164
@@ -58,10 +58,10 @@ misc {
 
 
 ores {
-    B:"Generate Copper Ore?"=true
-    B:"Generate Native Copper Ore?"=true
+    B:"Generate Copper Ore?"=false
+    B:"Generate Native Copper Ore?"=false
     B:"Generate Ruby Ore?"=true
-    B:"Generate Tin Ore?"=true
+    B:"Generate Tin Ore?"=false
 
     # Disabling this will make Crossroads copper/tin/bronze completely useless. The recipes will need copper/tin/bronze from other mods. Don't ask me why you'd want this.
     B:"Register OreDictionary for copper/tin/bronze? (Default true)"=true
@@ -78,7 +78,7 @@ specializations {
     B:"Enable Technomancy? (Default true)"=true
 
     # NYI
-    B:"Enable Witchcraft? (Default true)"=true
+    B:"Enable Witchcraft? (Default true)"=false
 }
 
 
