Slightly Big update

--- a/overrides/config/railcraft/railcraft.cfg
+++ b/overrides/config/railcraft/railcraft.cfg
@@ -72,7 +72,7 @@ recipes {
             # 
             # change to 'useAltRecipes=true' to use track recipes more similar to vanilla minecraft
             # 
-            B:useAltRecipes=false
+            B:useAltRecipes=true
         }
 
         alloy {
@@ -137,12 +137,12 @@ recipes {
             # 
             # change to 'bronze=false' to disable the bronze recipe for minecarts
             # 
-            B:bronze=true
+            B:bronze=false
 
             # 
             # change to 'steel=false' to disable the steel recipe for minecarts
             # 
-            B:steel=true
+            B:steel=false
 
             # 
             # change to 'vanilla.furnace=false' to disable the Furnace Minecart recipe
